set up photo uploading and initiated fetch in react to grab the saved albums

--- a/capstone_react/cap-react/src/views/statesProfile.css
+++ b/capstone_react/cap-react/src/views/statesProfile.css
@@ -1,5 +1,6 @@
 .rsns {
     border: 5px inset blue;
+    border-radius: 2%;
     background-color: white;
     color: black;
     padding: 2%;
@@ -13,6 +14,7 @@
 .atts {
     background-color: white;
     border: 5px inset red;
+    border-radius: 2%;
     color: black;
     margin-top: 3%;
     padding: 2%;
