--- a/capstone_react/cap-react/src/components/singlepic.css
+++ b/capstone_react/cap-react/src/components/singlepic.css
@@ -1,12 +1,61 @@
-#singlepic {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden
+#pic {
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
 }
-#singlepic {
-    flex-shrink: 0;
-    min-width: 100%;
-    min-height: 100%
+
+#pic:hover {opacity: 0.7;}
+
+.pic {
+    border: 10px solid black;
+    width: 75%;
+    border-radius: 5px;
 }
+
+.model-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+}
+
+@keyframes zoom {
+    from {transform: scale(0);}
+    to {transform: scale(1);}
+}
+
+#close {
+    position: relative;
+    top: 5px;
+    float: right;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+#close:hover,
+#close:focus {
+    color:#bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+@media only screen and (max-width: 700px){
+    .model-content {
+        width: 100%;
+    }
+}
+
+.picCard {
+    border: 1px solid black;
+    background-color: whitesmoke;
+}
+
+
+
+
+
 
