--- a/capstone_react/cap-react/src/views/map.css
+++ b/capstone_react/cap-react/src/views/map.css
@@ -8,7 +8,20 @@ path {
 
 .App {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 90%;
+    margin: auto;
+    margin-top: 150px;
     fill: silver;
+    font-family: cursive;
+    background-color: #e3f2fd;
+    border-radius: 10px;
 }
+
+.map-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+} 
