A few things  add to css

--- a/capstone_react/cap-react/src/css/journalBadge.css
+++ b/capstone_react/cap-react/src/css/journalBadge.css
@@ -1,6 +1,6 @@
 .journal-badge {
     border-radius: 10px;
-    background-color: #e3f2fd;
+    background-color: navajowhite;
     padding: 10px;
 }
 
