--- a/capstone_react/cap-react/src/css/map.css
+++ b/capstone_react/cap-react/src/css/map.css
@@ -16,7 +16,7 @@ path {
     margin-top: 150px;
     fill: silver;
     font-family: cursive;
-    background-color: #e3f2fd;
+    background-color: navajowhite;
     border-radius: 10px;
 }
 
