--- a/capstone_react/cap-react/src/css/profile.css
+++ b/capstone_react/cap-react/src/css/profile.css
@@ -13,7 +13,7 @@
     justify-content: space-around;
     font-family: cursive;
     text-transform: capitalize;
-    background-color: #e3f2fd;
+    background-color: navajowhite;
     border-radius: 10px;
 }
 
