--- a/capstone_react/cap-react/src/css/stateBadge.css
+++ b/capstone_react/cap-react/src/css/stateBadge.css
@@ -2,7 +2,7 @@
     border-radius: 10px;
     width: 25%;
     font-family: cursive;
-    background-color: #e3f2fd;
+    background-color: navajowhite;
 }
 
 .card-mid {
