--- a/capstone_react/cap-react/src/css/stateCard.css
+++ b/capstone_react/cap-react/src/css/stateCard.css
@@ -7,7 +7,7 @@
     height: 550px;
     margin: auto;
     border-radius: 10px;
-    background-color: #e3f2fd;
+    background-color: navajowhite;
 }
 
 .flag {
