--- a/capstone_react/cap-react/src/css/CA.css
+++ b/capstone_react/cap-react/src/css/CA.css
@@ -4,7 +4,7 @@
     padding-top: 50px;
     text-align: center;
     border-radius: 10px;
-    background-color: #e3f2fd;
+    background-color: navajowhite;
     height: 80vh;
     width: 45%;
     font-family: cursive;
