--- a/capstone_react/cap-react/src/css/album.css
+++ b/capstone_react/cap-react/src/css/album.css
@@ -5,7 +5,7 @@
 }
 
 .album-header {
-    background-color: #e3f2fd;
+    background-color: navajowhite;
     margin-bottom: 10px;
     text-decoration: underline;
     color: black;
@@ -18,7 +18,7 @@
     color: black;
     display: flex;
     justify-content: space-around;
-    background-color: #e3f2fd;
+    background-color: navajowhite;
     border-radius: 5px;
 
 }
